--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "video2markdown-web",
+  "name": "ai-media2doc-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
