--- a/variables.env
+++ b/variables.env
@@ -1,5 +1,5 @@
 MODEL_ID=xxx
-ARK_API_KEY=xxx
+LLM_API_KEY=xxx
 TOS_ACCESS_KEY=xxx
 TOS_SECRET_KEY=xxx
 TOS_ENDPOINT=xxx
@@ -8,4 +8,7 @@ TOS_BUCKET=xxx
 AUC_APP_ID=xxx
 AUC_ACCESS_TOKEN=xxx
 AUC_CLUSTER_ID=XXX
-WEB_ACCESS_PASSWORD=如果不需要密码访问，请留空或者删除此行
+# 如果不需要密码访问，请留空或者删除此行
+WEB_ACCESS_PASSWORD=
+# 默认使用字节火山方舟的大模型服务
+LLM_BASE_URL=https://ark.cn-beijing.volces.com/api/v3
