--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ pydantic==2.5.0
 python-multipart==0.0.6
 throttled-py==2.0.2
 openai==1.88.0
-tos==2.7.1
 requests==2.31.0
 python-json-logger==2.0.7
+boto3==1.40.69
