--- a/variables_template.env
+++ b/variables_template.env
@@ -1,10 +1,10 @@
 MODEL_ID=xxx
 LLM_API_KEY=xxx
-TOS_ACCESS_KEY=xxx
-TOS_SECRET_KEY=xxx
-TOS_ENDPOINT=xxx
-TOS_REGION=xxx
-TOS_BUCKET=xxx
+STORAGE_ACCESS_KEY=xxx
+STORAGE_SECRET_KEY=xxx
+STORAGE_ENDPOINT=xxx
+STORAGE_REGION=xxx
+STORAGE_BUCKET=xxx
 AUC_APP_ID=xxx
 AUC_ACCESS_TOKEN=xxx
 AUC_CLUSTER_ID=XXX
